--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Base Styles */
 * {
     margin: 0;
     padding: 0;
@@ -6,7 +7,7 @@
 }
 
 body {
-    background-color: #333333; /* Dark background color */
+    background-color: #333333;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -16,41 +17,42 @@ body {
 
 .container {
     display: flex;
+    flex-direction: column;
     width: 90%;
     max-width: 1200px;
-    height: 90vh;
-    background-color: #444444; /* Slightly lighter dark color */
-    color: #f2f2f2; /* Light text color */
+    height: auto;
+    background-color: #444444;
+    color: #f2f2f2;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .half {
-    width: 50%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 20px;
-    border-right: 2px solid #7963f4;
+    border-bottom: 2px solid #7963f4;
 }
 
 .half:last-child {
-    border-right: none;
+    border-bottom: none;
 }
 
 .title {
     font-size: 36px;
     margin-bottom: 20px;
-    color: #f2f2f2; /* Matching color for both titles */
+    color: #f2f2f2;
 }
 
 .input-box, #quote-box {
     margin: 20px 0;
     padding: 20px;
     border-radius: 10px;
-    background: #555555; /* Lighter dark color for input and quote boxes */
+    background: #555555;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -90,22 +92,40 @@ body {
 
 #result {
     font-size: 20px;
-    font-family: 'Courier New', Courier, monospace; /* Different font for age result */
+    font-family: 'Courier New', Courier, monospace;
 }
 
 #result span {
-    color: #f2f2f2; /* Light text color */
+    color: #f2f2f2;
 }
 
 .quote-text {
     font-size: 1.5em;
-    font-family: 'Georgia', serif; /* Different font for quotes */
+    font-family: 'Georgia', serif;
     margin: 10px 0;
     text-align: center;
 }
 
 .quote-author {
     font-size: 1.2em;
-    font-family: 'Courier New', Courier, monospace; /* Different font for author names */
+    font-family: 'Courier New', Courier, monospace;
     margin: 5px 0;
+}
+
+/* Responsive Styles */
+@media (min-width: 768px) {
+    .container {
+        flex-direction: row;
+        height: 90vh;
+    }
+    
+    .half {
+        width: 50%;
+        border-right: 2px solid #7963f4;
+    }
+    
+    .half:last-child {
+        border-right: none;
+        border-bottom: none;
+    }
 }
